<resources>
    <string name="app_name">PiedraPapelTijeras</string>
    <string name="tvTituloJuego">Piedra Papel Tijeras</string>
    <string name="bEntrar">Entrar</string>
    <string name="bSalir">Salir</string>
    <string name="etHintNombre">"Introduce tu nombre: "</string>
    <string name="tvBienvenida">"Bienvenido </string>
    <string name="tvOponente">"Tu oponente: "</string>
    <string name="tvTurno">"Turno del Jugador"</string>
    <string name="tvTu">Tu:</string>
    <string name="tvPuntuacion">"Puntuacion: "</string>
    <string name="tvPGanadas">"Partidas Ganadas: "</string>
    <string name="etHintNumero">"Introduce el teléfono: "</string>
    <string name="etHintMensaje">"Introduce el Mensaje: "</string>
    <string name="bEnviar">Enviar</string>
</resources>