<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenuInicio">

    <Button
        android:id="@+id/bSalir"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#000000"
        android:onClick="salir"
        android:text="@string/bSalir"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bEntrar" />

    <Button
        android:id="@+id/bEntrar"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#000000"
        android:onClick="entrar"
        android:text="@string/bEntrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/etHintNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="266dp"
        android:layout_height="244dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_juego" />

</androidx.constraintlayout.widget.ConstraintLayout>